projects/ingress-nginx/nginx-board-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-board
  name: nginx-board-deploy
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-board
  template:
    metadata:
      labels:
        app: nginx-board
    spec:
      # [1] Anti-Affinity (Soft)
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: nginx-board
                topologyKey: "kubernetes.io/hostname"

      # [2] Topology Spread
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: nginx-board

      imagePullSecrets:
      - name: ecr-cred-nginx
      
      containers:
      - name: nginx-board-container
        image: 820313036770.dkr.ecr.ap-northeast-2.amazonaws.com/streets_board_nginx:v1.4
        
        # [3] Graceful Shutdown
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 10"]

        ports:
        - containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /board.do
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /board.do
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
