projects/ingress-nginx/ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller   # 이름: ingress-nginx-controller
  namespace: ingress-nginx         # 네임스페이스: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx # label: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer               
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
