projects/ingress-nginx/nginx-board-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-board-svc
  namespace: nginx-board
  labels:
    app: nginx-board
spec:
  selector:
    app: nginx-board
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
