projects/ingress-nginx/nginx-member-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-member-svc
  namespace: ingress-nginx
  labels:
    app: nginx-member
spec:
  type: LoadBalancer
  selector:
    app: nginx-member
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
